--- a/.github/workflows/matomo-ejercicio_2.yml
+++ b/.github/workflows/matomo-ejercicio_2.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
       with:
-        context: .
+        context: ./ejercicio-2
         push: true
         tags: mariopeve/matomo-entregable2:latest
